repository name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kamsiOrazulike.github.io/kamsiorazulike.github.io",
+  "homepage": "http://kamsiOrazulike.github.io/webfolio",
   "name": "kamfolio",
   "version": "0.1.0",
   "private": true,
